Bug 242110 - Clearing scrollback and resetting (Ctrl+Alt+X) does not present a new prompt
Summary: Clearing scrollback and resetting (Ctrl+Alt+X) does not present a new prompt
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: kpart (other bugs)
Version First Reported In: 2.4.999
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 149562 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-18 22:26 UTC by JR
Modified: 2011-02-11 16:33 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Completely empty scrollback devoid of prompt, resulting after hitting Ctrl+Alt+X (18.29 KB, image/jpeg)
2010-06-18 22:26 UTC, JR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description JR 2010-06-18 22:26:24 UTC
Created attachment 48119 [details]
Completely empty scrollback devoid of prompt, resulting after hitting Ctrl+Alt+X

Version:           2.9.6 (using Devel) 
OS:                Linux

Kubuntu lucid, running KDE 4.4.85 (4.5 beta 2). Yakuake package version 2.9.6-1ubuntu1 from lucid universe. Qt4 packages are version 4:4.7.0~beta1+git20100522-0ubuntu1~lucid1~ppa1 from kubuntu-ppa/beta.

Whenever I clear scrollback and reset a terminal, by hitting Ctrl+Alt+X or selecting it in the right-click context menu, the screen is cleared but no new prompt is offered. If I hit Enter it moves to a new line and properly presents a prompt, now on the second line of the new scrollback.

Reproducible: Always

Steps to Reproduce:
1. Open Yakuake
2. Fill scrollback a bit, such as by listing a directory
3. Clear scrollback and reset by hitting Ctrl+Alt+X4

Actual Results:  
4. Results in an empty screen

Expected Results:  
4. A new prompt should be offered in the new scrollback

While the Yakuake version has obviously remained 2.6.1, I think this was introduced when I installed 4.4.85 and the Qt4 4.7.0 beta packages.
Comment 1 Eike Hein 2010-06-18 22:29:35 UTC
The terminal area is provided by Konsole, reassigning.
Comment 2 Robert Knight 2010-06-20 16:21:38 UTC
Hello,

Which shell are you using?  Redrawing the prompt after clearing and resetting scrollback is done via a hack that works with bash but is known not to work with some other shells (eg. zsh).  If you care to investigate a suitable method for forcing the shell to redraw the prompt that works with the shell you are using and preferably others as well, let us know and it can be implemented.
Comment 3 Stefano Crocco 2010-07-05 14:48:31 UTC
I have the same problem with KDE 4.5-RC1 and the bash shell (version 4.1.7), so I'd say that either the source of the problem isn't the kind of shell used or the hack used to force the shell to redraw the prompt doesn't work with this version of bash.
Comment 4 Robert Knight 2010-07-05 17:46:22 UTC
I've noticed that it is broken in trunk as well with bash.
Comment 5 Nikos Chantziaras 2010-07-17 11:09:47 UTC
Same problem here. This happened after updating from KDE 4.4.4 to KDE 4.5 RC1 a while back, and it still happens with RC2.

I did not change the version of bash (4.1_p7).
Comment 6 Nikos Chantziaras 2010-11-07 16:33:28 UTC
Still a problem with KDE 4.5.3 :-/
Comment 7 Błażej Szczygieł 2010-12-16 17:18:53 UTC
Still problem with KDE 4.5.85 :(
Comment 8 Nikos Chantziaras 2011-01-05 16:16:54 UTC
Still happens with 4.5.90 (RC 1).
Comment 9 Nikos Chantziaras 2011-01-28 14:19:21 UTC
Issue still there with KDE 4.6 final.
Comment 10 José Manuel Santamaría Lema 2011-02-08 16:37:02 UTC
*** Bug 149562 has been marked as a duplicate of this bug. ***
Comment 11 Kurt Hindenburg 2011-02-10 16:48:43 UTC
Git commit 82778e87bc75e07d006e3de70ec0951ff445a56c by Kurt Hindenburg.
Committed on 10/02/2011 at 16:44.
Pushed by hindenburg into branch 'master'.

After a 'clear & reset' make sure the prompt reappears.

BUG: 242110

M  +1    -1    src/SessionController.cpp     

http://commits.kde.org/konsole/82778e87bc75e07d006e3de70ec0951ff445a56c
Comment 12 Ahmad Samir 2011-02-10 17:49:34 UTC
Thanks, fixed here.
Comment 13 Kurt Hindenburg 2011-02-11 16:33:45 UTC
Git commit 249dc86a1b6239bb4509d13157bfd9ebe5847fc2 by Kurt Hindenburg.
Committed on 11/02/2011 at 16:29.
Pushed by hindenburg into branch 'KDE/4.6'.

After a 'clear & reset' make sure the prompt reappears.

CCBUG: 242110

M  +1    -1    src/SessionController.cpp     

http://commits.kde.org/konsole/249dc86a1b6239bb4509d13157bfd9ebe5847fc2