After a 'clear & reset' make sure the prompt reappears.

BUG: 242110